improve exercise management service impl